--- a/src/app/pages/characters/characters.page.html
+++ b/src/app/pages/characters/characters.page.html
@@ -9,6 +9,7 @@
 <ion-menu side="start" menuId="first" contentId="main">
   <ion-header>
     <ion-toolbar>
+      <ion-menu-button color="primary" slot="start"></ion-menu-button>
       <ion-title color="primary">Menu</ion-title>
       <ion-icon (click)="makePreset()" name="save" slot="end"></ion-icon>
     </ion-toolbar>
