--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -15,4 +15,5 @@
       <ion-toggle slot="end" (click)="ds.save()" [(ngModel)]="ds.IronMan"></ion-toggle>
     </ion-item>
   </ion-list>
+  <p style="color: gray; padding: 20px">App made by Wout "TheLazyKitten" van Riel</p>
 </ion-content>
